@@ -299,6 +299,8 @@ New in v0.8.00 (2016/07/??)
   - This will keep memory usage lower in non collection-status operations
 * Fixed bug #1723890 with patch from Killian Lackhove
   - Fixes error handling in pydrivebackend.py
+* Fixed bug #1730902 GPG Error Handling
+  - use util.ufn() not str() to handle encoding
 
 
 New in v0.7.08 (2016/07/02)
